# tenant-leasing-mcp

./: .gitignore  .replit  Dockerfile  Procfile  README.md  deploy_local.sh  pyproject.toml  render.yaml  requirements.txt  run_server.sh  server.py
tenant-info/: nearby_advertised_units.csv  synthetic_guest_cards.csv
